@@ -797,6 +797,7 @@ $2",
 'namespaceprotected'   => "You do not have permission to edit pages in the '''$1''' namespace.",
 'customcssjsprotected' => "You do not have permission to edit this page, because it contains another user's personal settings.",
 'ns-specialprotected'  => "Pages in the {{ns:special}} namespace cannot be edited.",
+'protected-subtitle'   => "<!-- This message will be displayed as the subtitle for pages that are protected. The argument $1 is the level of edit-protection (i.e., sysop or autoconfirmed), and $2 is the level of move-protection. --> (This page is protected.)",
 
 # Login and logout pages
 'logouttitle'                => 'User logout',
